@@ -56,6 +56,7 @@ Windows.
 lines in the document exceeds 10,000.
 +Full line number not being visible when lines exceed 1,000,000
 +Save As dialog not populating current file name under all execution paths
++Fix a number of bugs in the updater caused by website changes.
 
 #-----------------------------------------------------------------------------#
 
